Updated Skills Section. Added a class "skills-heading" to the skills heading, <h3>

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="web-developer-img" src="images/web-dev-modified.png" alt="web-developer-img">
-        <h3>Design and Development.</h3>
+        <h3 class="skill-heading">Design and Development.</h3>
         <p>I am always looking to learn and acquire new skills. As such, I started learning to code 4 years ago and have not stopped since. Over time, I have gained a wealth of experience designing and developing software systems. Currently, I am focusing on learning the essence of full stack web development.</p>
       </div>
       <div class="skill-row">
         <img class="collaboration-img" src="images/CnC-modified.png" alt="collaboration-img">
-        <h3>Communication and Collaboration.</h3>
+        <h3 class="skill-heading">Communication and Collaboration.</h3>
         <p>I am passionate about being able to give back to my community. I have held numerous volunteer and leadership positions serving as a student advocate for over ECSE 1200 students, an event planner managing large budgets and timelines, and a peer mentor to other people in ECSE, to name a few.</p>
       </div>
     </div>
