Modified intro text slightly.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <h2>Hello.</h2>
       <div class="intro">
-        <p>I'm a 3rd year Computer Engineering student at McGill University. I love to design and build software and machines to solve real world problems.</p>
+        <p>I'm a 3rd year Computer Engineering student at McGill University. I love to design and build software to solve real world problems.</p>
       </div>
     </div>
     <hr>
