--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch.</h2>
-      <h3>If you enjoy self-depracating humor as much as I do.</h3>
-      <p class="contact-message">Love comedy as much as I do? Let's talk more about how awesome it is.
-We can also discuss solving real-world problems through technology while we are at it.</p>
+      <h3>If you enjoy Gilmore Girls as much as I do.</h3>
+      <p class="contact-message">Love Lorelai? Let's talk more about how amazing she is.
+        We can also discuss solving real-world problems through technology while we are at it.</p>
         <a class="btn" href="mailto:mohammad.junaidarif@mail.mcgill.ca">CONTACT ME</a>
     </div>
   </div>
