--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="contact-me">
       <h2>Get In Touch.</h2>
       <h3>If you enjoy Gilmore Girls as much as I do.</h3>
-      <p class="contact-message">Love comedy as much as I do? Let's talk more about how awesome it is.<br/>We can also discuss solving real-world problems through technology while we are at it.</p>
+      <p class="contact-message">Love Lorelai? Let's talk more about how amazing she is.<br/>We can also discuss solving real-world problems through technology while we are at it.</p>
         <a class="btn" href="mailto:mohammad.junaidarif@mail.mcgill.ca">CONTACT ME</a>
     </div>
   </div>
