Updated Web Skills paragraph

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="skill-row">
         <img class="collaboration-img" src="images/CnC-modified.png" alt="collaboration-img">
         <h3 class="skill-heading">Communication and Collaboration.</h3>
-        <p>I am passionate about being able to give back to my community. I have held numerous volunteer and leadership positions serving as a student advocate for over ECSE 1200 students, an event planner managing large budgets and timelines, and a peer mentor to other people in ECSE, to name a few.</p>
+        <p>I am passionate about being able to give back to my community. I have held numerous volunteer and leadership positions serving as a student advocate for over 1200 Electrical, Computer, and Software Engineering students, an event planner managing large budgets and timelines, and a peer mentor to other people in ECSE, to name a few.</p>
       </div>
     </div>
     <hr>
